@@ -1,5 +1,11 @@
 2004-11-15  Pascal Scheffers  <pascal@scheffers.net>
 
+	* tkchat.tcl: jabber: logoff now works correctly; colors for ijchain
+	users; enabled keep alive for all connection types; prevent sending
+	/userinfo; prevent history from loading twice; 
+
+2004-11-15  Pascal Scheffers  <pascal@scheffers.net>
+
 	* tkchat.tcl: Fixed ijchain /me actions.
 
 2004-11-15  Pascal Scheffers  <pascal@scheffers.net>
